--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -32,7 +32,9 @@
       background-color: #fef6ed;
       box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
     }
-
+    .menu a {
+      text-decoration: underline;
+    }
     .menu a.current {
       text-decoration: underline;
       background-color: darkorange;
