--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -145,7 +145,7 @@
 
   <section class="events">
     <h2>🗓 ITSA Upcoming Events Calendar</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&src=en.usa%23holiday%40group.v.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&color=%23D35400&src=en.usa%23holiday%40group.v.calendar.google.com&color=%230F4B9E&ctz=America%2FLos_Angeles" style="border: 0" frameborder="0" scrolling="no"></iframe>
 
   <section class="content-grid">
     <a href="/project/webpages/about.html" class="card-link">
