--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -195,7 +195,7 @@
       <img src="/project/images/facebook logo.png" alt="Facebook" />
     </a>
     <br>
-    <a href="https://www.shsu.edu.com/" target="_blank">
+    <a href="https://www.shsu.edu/" target="_blank">
       <img src="/project/images/newlogo2.png" alt="SHSU Home" />
     </a>
     <!-- Add more icons as needed -->
