--- a/project/webpages/officerscopy.html
+++ b/project/webpages/officerscopy.html
@@ -26,7 +26,7 @@
     <div class="menu-button"></div>  
     </label>
     <ul class="menu">
-        <li><a href="/project/webpages/homepage.html">Home</a></li>
+        <li><a href="/project/webpages/homepagetest.html">Home</a></li>
         <li><a href="/project/webpages/about.html">About</a></li>
         <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
         <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
@@ -36,13 +36,13 @@
 
 <section class="officer-grid">
     <article class="advisor-k">
-      <img src="/project/images/DrKPhoto.png" alt="Dr. Kamphol Wipawayangkool">
+      <img src="/images/DrKPhoto.png" alt="Dr. Kamphol Wipawayangkool">
       <h2>Dr. Kamphol Wipawayangkool</h2>
       <p> | ITSA Advisor</p>
     </article>
   
     <article class="advisor-w">
-      <img src="/project/images/DrWarnPhoto.png" alt="Dr. Janis Warner">
+      <img src="/images/DrWarnPhoto.png" alt="Dr. Janis Warner">
       <h2>Dr. Janis Warner</h2>
       <p> | ITSA Advisor</p>
     </article>
