--- a/project/webpages/officerscopy.html
+++ b/project/webpages/officerscopy.html
@@ -36,13 +36,13 @@
 
 <section class="officer-grid">
     <article class="advisor-k">
-      <img src="/images/DrKPhoto.png" alt="Dr. Kamphol Wipawayangkool">
+      <img src="/project/images/DrKPhoto.png" alt="Dr. Kamphol Wipawayangkool">
       <h2>Dr. Kamphol Wipawayangkool</h2>
       <p> | ITSA Advisor</p>
     </article>
   
     <article class="advisor-w">
-      <img src="/images/DrWarnPhoto.png" alt="Dr. Janis Warner">
+      <img src="/project/images/DrWarnPhoto.png" alt="Dr. Janis Warner">
       <h2>Dr. Janis Warner</h2>
       <p> | ITSA Advisor</p>
     </article>
