--- a/project/webpages/testpages/homepagetest.html
+++ b/project/webpages/testpages/homepagetest.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ITSA Official Webpage</title>
-  <link rel="stylesheet" href="/project/styles/homepage.css">
+  <link rel="stylesheet" href="/project/styles/teststyles/homepage copy.css">
   <style>
     html {
       scroll-behavior: smooth;
