--- a/project/webpages/testpages/abouttest.html
+++ b/project/webpages/testpages/abouttest.html
@@ -34,24 +34,26 @@
     </ul>
 </section>
 
-<section>
-  <h2>Our Mission</h2>
-  <p>This project aims to provide users with an intuitive and responsive web experience. We focus on delivering high-quality content and seamless navigation.</p>
-</section>
+<main>
+  <section>
+    <h2>Our Mission</h2>
+    <p>This project aims to provide users with an intuitive and responsive web experience...</p>
+  </section>
 
-<section>
-  <h2>Team</h2>
-  <p>Our dedicated team consists of developers, designers, and content creators who collaborate to bring this project to life.</p>
-</section>
+  <section>
+    <h2>Team</h2>
+    <p>Our dedicated team consists of developers, designers, and content creators...</p>
+  </section>
 
-<section>
-  <h2>Technologies Used</h2>
-  <ul>
-    <li>HTML5</li>
-    <li>CSS3</li>
-    <li>JavaScript</li>
-  </ul>
-</section>
+  <section>
+    <h2>Technologies Used</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>JavaScript</li>
+    </ul>
+  </section>
+</main>
 
   <footer>
     <p>&copy; 2025 ITSA | Sam Houston State University. All rights reserved.</p>
