--- a/project/webpages/imagegallery.html
+++ b/project/webpages/imagegallery.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ITSA Official Webpage</title>
     <link rel="stylesheet" href="/project/styles/imagegallery.css">
+    <style>
+      .menu a {
+        text-decoration: underline;
+      }
+      .menu a.current {
+        text-decoration: underline;
+        background-color: darkorange;
+      }
+    </style>
 </head>
 <body>
     <a href="https://www.shsu.edu/" target="_blank" class="floating-logo">
@@ -30,7 +39,7 @@
         <li><a href="/project/webpages/about.html">About</a></li>
         <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
         <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
-        <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
+        <li><a href="/project/webpages/imagegallery.html"  class="current">Image Gallery</a></li>
     </ul>
 </section>
 
