--- a/project/webpages/testpages/officerscopy.html
+++ b/project/webpages/testpages/officerscopy.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ITSA Official Webpage</title>
-    <link rel="stylesheet" href="/project/styles/teststyles/officerscopy.css">
+    <link rel="stylesheet" href="/project/styles/officers.css">
+    <style>
+    .menu a {
+      text-decoration: underline;
+    }
+    .menu a.current {
+      text-decoration: underline;
+      background-color: darkorange;
+    }
+  </style>
 </head>
 <body>
     <a href="https://www.shsu.edu/" target="_blank" class="floating-logo">
@@ -28,7 +37,7 @@
     <ul class="menu">
         <li><a href="/project/webpages/homepage.html">Home</a></li>
         <li><a href="/project/webpages/about.html">About</a></li>
-        <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
+        <li><a href="/project/webpages/officers.html"class="current">ITSA Officers</a></li>
         <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
         <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
     </ul>
