--- a/project/webpages/officers.html
+++ b/project/webpages/officers.html
@@ -35,11 +35,12 @@
     <div class="menu-button"></div>  
     </label>
     <ul class="menu">
-        <li><a href="/project/webpages/homepage.html">Home</a></li>
-        <li><a href="/project/webpages/about.html">About</a></li>
-        <li><a href="/project/webpages/officers.html"class="current">ITSA Officers</a></li>
-        <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
-        <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
+      <li><a href="/project/webpages/homepage.html">Home</a></li>
+      <li><a href="/project/webpages/about.html">About</a></li>
+      <li><a href="/project/webpages/officers.html"class="current">Officers</a></li>
+      <li><a href="/project/webpages/meetings.html">Meetings</a></li>
+      <li><a href="/project/webpages/accomplishments.html">Accomplishments</a></li>
+      <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
     </ul>
 </section>
 
