--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -131,8 +131,9 @@
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html" class="current">Home</a></li>
       <li><a href="/project/webpages/about.html">About</a></li>
-      <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
-      <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
+      <li><a href="/project/webpages/officers.html">Officers</a></li>
+      <li><a href="/project/webpages/meetings.html">Meetings</a></li>
+      <li><a href="/project/webpages/accomplishments.html">Accomplishments</a></li>
       <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
     </ul>
   </section>
