--- a/project/webpages/meetings.html
+++ b/project/webpages/meetings.html
@@ -68,8 +68,9 @@
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html">Home</a></li>
       <li><a href="/project/webpages/about.html">About</a></li>
-      <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
-      <li><a href="/project/webpages/meetings.html" class="current">ITSA Meetings</a></li>
+      <li><a href="/project/webpages/officers.html">Officers</a></li>
+      <li><a href="/project/webpages/meetings.html" class="current">Meetings</a></li>
+      <li><a href="/project/webpages/accomplishments.html">Accomplishments</a></li>
       <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
     </ul>
   </section>
