--- a/project/webpages/accomplishments.html
+++ b/project/webpages/accomplishments.html
@@ -39,8 +39,8 @@
       <li><a href="/project/webpages/about.html">About</a></li>
       <li><a href="/project/webpages/officers.html">Officers</a></li>
       <li><a href="/project/webpages/meetings.html">Meetings</a></li>
-      <li><a href="/project/webpages/accomplishments.html">Accomplishments</a></li>
-      <li><a href="/project/webpages/imagegallery.html" class="current">Image Gallery</a></li>
+      <li><a href="/project/webpages/accomplishments.html"class="current">Accomplishments</a></li>
+      <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
     </ul>
 </section>
 
