--- a/project/webpages/accomplishments.html
+++ b/project/webpages/accomplishments.html
@@ -21,7 +21,7 @@
     </a>
    <header>
     <h1>Sam Houston State University</h1>
-    <h2>Gallery images Page Placeholder</h2>
+    <h2>Accomplishments Page Placeholder</h2>
        <div class="header-container">
     </div>
   </header>
