--- a/project/webpages/imagegallery.html
+++ b/project/webpages/imagegallery.html
@@ -44,37 +44,25 @@
     </ul>
 </section>
 
-  <section>
-    <article>
-        <h2>Placeholder</h2>
-        <p>Placeholder</p>
-      </article>
-
-  <article>
-    <h2>Placeholder</h2>
-    <p>Placeholder</p>
-  </article>
-
-  <article>
-    <h2>Placeholder</h2>
-    <p>Placeholder</p>
-  </article>
-
-  <article>
-    <h2>Placeholder</h2>
-    <p>Placeholder</p>
-  </article>
-
-  <article>
-    <h2>Placeholder</h2>
-    <p>Placeholder</p>
-  </article>
-
-  <article>
-    <h2>Placeholder</h2>
-    <p>Placeholder</p>
-  </article>
 </section>
+
+<main class="gallery-container">
+  <div class="gallery-item">
+    <img src="/project/images/itsa-event1.jpeg" alt="ITSA group photo with Max Pendley from LighthouseIT" />
+  </div>
+  <div class="gallery-item">
+    <img src="/project/images/itsa-event2.jpeg" alt="IT Careers in Healthcare event flyer" />
+  </div>
+  <div class="gallery-item">
+    <img src="/project/images/itsa-event3.jpeg" alt="Group photo with guest speaker Mallory Long via Zoom" />
+  </div>
+  <div class="gallery-item">
+    <img src="/project/images/itsa-event4.jpeg" alt="Thank you flyer for AITP sponsors" />
+  </div>
+  <div class="gallery-item">
+    <img src="/project/images/itsa-event5.jpeg" alt="Flyer for ITSA networking event with Trent Sexton" />
+  </div>
+</main>
 
   <footer>
     <p>&copy; 2025 ITSA | Sam Houston State University. All rights reserved.</p>
