--- a/project/webpages/imagegallery.html
+++ b/project/webpages/imagegallery.html
@@ -48,19 +48,19 @@
 
 <main class="gallery-container">
   <div class="gallery-item">
-    <img src="/project/images/itsa-event1.jpeg" alt="ITSA group photo with Max Pendley from LighthouseIT" />
+    <img src="/project/images/img1.jpeg" alt="ITSA group photo with Max Pendley from LighthouseIT" />
   </div>
   <div class="gallery-item">
-    <img src="/project/images/itsa-event2.jpeg" alt="IT Careers in Healthcare event flyer" />
+    <img src="/project/images/img5.jpeg" alt="IT Careers in Healthcare event flyer" />
   </div>
   <div class="gallery-item">
-    <img src="/project/images/itsa-event3.jpeg" alt="Group photo with guest speaker Mallory Long via Zoom" />
+    <img src="/project/images/img3.jpeg" alt="Group photo with guest speaker Mallory Long via Zoom" />
   </div>
   <div class="gallery-item">
-    <img src="/project/images/itsa-event4.jpeg" alt="Thank you flyer for AITP sponsors" />
+    <img src="/project/images/img2.jpeg" alt="Thank you flyer for AITP sponsors" />
   </div>
   <div class="gallery-item">
-    <img src="/project/images/itsa-event5.jpeg" alt="Flyer for ITSA networking event with Trent Sexton" />
+    <img src="/project/images/img4.jpeg" alt="Flyer for ITSA networking event with Trent Sexton" />
   </div>
 </main>
 
