--- a/project/webpages/accomplishments.html
+++ b/project/webpages/accomplishments.html
@@ -233,7 +233,7 @@
 
   <div class="content">
     <div class="image-section">
-      <img src="/project/images/403ea71e-6876-4294-85ff-bec3e74c0155.png" alt="IT Students Association Achievements">
+      <img src="/project/images/trophy.png" alt="IT Students Association Achievements">
     </div>
 
     <div class="accomplishments">
