--- a/project/webpages/about.html
+++ b/project/webpages/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ITSA Official Webpage</title>
+  <title>CMIS Connect</title>
     <link rel="stylesheet" href="/project/styles/teststyles/aboutcopy.css">
     <style>
       .menu a {
@@ -11,7 +11,7 @@
       }
       .menu a.current {
         text-decoration: underline;
-        background-color: darkorange;
+        background-color: #500000;
       }
     </style>
 </head>
@@ -20,7 +20,7 @@
       <img src="/project/images/newlogo2.png" alt="Website Logo" height="80" width="80">
     </a>
    <header>
-    <h1>Sam Houston State University</h1>
+    <h1>CMIS Connect</h1>
     <h2>About Us</h2>
        <div class="header-container">
     </div>
