--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -115,8 +115,8 @@
     <img src="/project/images/newlogo2.png" alt="Website Logo" height="80" width="80">
   </a>
   <header>
-    <h1>Information Technology Student Association</h1>
-    <h2>Sam Houston State University</h2>
+    <h1>CMIS Connect</h1>
+    <h2>Texas A&M University</h2>
     <div class="header-container"></div>
   </header>
 
